--- a/Hello.html
+++ b/Hello.html
@@ -16,8 +16,16 @@
 </div>
 
 <script>
-    var x = 44;
-    alert(x);
+    var x = '44'; //string
+    var y = 22; //number
+    alert(x+y);
+
+    //Letters,Numbers,Underscores,dollar signs.
+    //Begins with a character.
+    //_$
+    //Case Sensitive.
+
+
 
 </script>
 </body>
