--- a/Hello.html
+++ b/Hello.html
@@ -12,7 +12,10 @@
 </div>
 
 <div class="container">
-
+    <button onclick="doClick()">Click Me</button>
+    <button onclick="this.innerHTML='You CLicked'">Click Me</button>
+    <button onclick="changeText(this)">Click Me</button>
+    <button onclick="showDate()">Show Date</button>
 </div>
 
 <script>
