--- a/Hello.html
+++ b/Hello.html
@@ -12,10 +12,12 @@
 </div>
 
 <div class="container">
+    <h1 id="time"></h1>
     <button onclick="doClick()">Click Me</button>
-    <button onclick="this.innerHTML='You CLicked'">Click Me</button>
     <button onclick="changeText(this)">Click Me</button>
     <button onclick="showDate()">Show Date</button>
+    <button onmouseover="showDate()">Show Date</button>
+    <button onmouseout="showDate()">Show Date</button>
 </div>
 
 <script>
